Change JDK to version 8!